// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/constellations/ContentBlock Renders a <ContentBlock /> with a CTA 1`] = `
<Row
  padding={null}
  reverse={true}
>
  <Col
    align="flex-start"
    padding={65}
    reverse={false}
  >
    <Typography__FeatureHeadline>
      Test ContentBlock
    </Typography__FeatureHeadline>
    <Typography__BodyCopy
      inverted={false}
      textAlign="left"
    >
      ContentBlock is sooooooo coool and awesome!
    </Typography__BodyCopy>
    <Button__StyledButton
      external={false}
      text="Click here!"
      type="primary"
      url="path/to/link"
    />
  </Col>
</Row>
`;

exports[`components/constellations/ContentBlock Renders a <ContentBlock /> with an Image 1`] = `
<Row
  padding={null}
  reverse={true}
>
  <Col
    align="center"
    padding={null}
    reverse={false}
  >
    <Image__StyledImage
      alt="Cool image!"
      fullWidth={true}
      src="path/to/image"
    />
  </Col>
  <Col
    align="flex-start"
    padding={65}
    reverse={false}
  >
    <Typography__FeatureHeadline>
      Test ContentBlock
    </Typography__FeatureHeadline>
    <Typography__BodyCopy
      inverted={false}
      textAlign="left"
    >
      ContentBlock is sooooooo coool and awesome!
    </Typography__BodyCopy>
  </Col>
</Row>
`;

exports[`components/constellations/ContentBlock Renders a <ContentBlock /> with an right imageAlign and left textAlign 1`] = `
<Row
  padding={null}
  reverse={true}
>
  <Col
    align="center"
    padding={null}
    reverse={false}
  >
    <Image__StyledImage
      alt="Cool image!"
      fullWidth={true}
      src="path/to/image"
    />
  </Col>
  <Col
    align="flex-start"
    padding={65}
    reverse={false}
  >
    <Typography__FeatureHeadline>
      Test ContentBlock
    </Typography__FeatureHeadline>
    <Typography__BodyCopy
      inverted={false}
      textAlign="left"
    >
      ContentBlock is sooooooo coool and awesome!
    </Typography__BodyCopy>
  </Col>
</Row>
`;

exports[`components/constellations/ContentBlock Renders a <ContentBlock /> with no image 1`] = `
<Row
  padding={null}
  reverse={true}
>
  <Col
    align="flex-start"
    padding={65}
    reverse={false}
  >
    <Typography__FeatureHeadline>
      Test ContentBlock
    </Typography__FeatureHeadline>
    <Typography__BodyCopy
      inverted={false}
      textAlign="left"
    >
      ContentBlock is sooooooo coool and awesome!
    </Typography__BodyCopy>
  </Col>
</Row>
`;
